--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
-  "name": "react-starter-pack",
+  "name": "react-component-starterpack",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "license": "MIT",
+  "devDependencies": {
+    "@storybook/react": "^3.2.8",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-css-modules": "^3.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.5",
+    "storybook": "^0.0.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5",
+    "postcss": "^6.0.10"
+  },
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "build": "webpack"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  }
 }
