--- a/package.json
+++ b/package.json
@@ -4,23 +4,33 @@
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
-    "@storybook/react": "^3.2.8",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-css-modules": "^3.2.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.5",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "postcss": "^6.0.10",
+    "pre-commit": "^1.2.2",
     "storybook": "^0.0.1",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "postcss": "^6.0.10"
+    "webpack": "^3.5.5"
   },
   "scripts": {
+    "lint": "eslint src stories",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "webpack"
   },
+  "pre-commit": [
+    "lint", "build-storybook"
+  ],
   "dependencies": {
+    "@storybook/react": "^3.2.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
